# libkoralle

./: AUTHORS  CMakeLists.txt  ChangeLog  README  TODO  koralle.pc.in  libkoralle.lsm
includes/: CMakeLists.txt  FourCharCode  RiffStreamReader
src/: CMakeLists.txt  fourcharcode.h  koralle_export.h  riffstreamreader.cpp  riffstreamreader.h  riffstreamreader_p.cpp  riffstreamreader_p.h
